# polynomial_subspaces

./: .gitignore  Cargo.toml  README.md
examples/: full_example.rs
src/: dense_ordinary_polynomial.rs  fundamental_theorem.rs  generic_polynomial.rs  inner_product.rs  jacobi.rs  lib.rs  main.rs  my_symmetrical_basis_pair.rs  note.txt  ordinary_polynomial.rs  pade.rs  special_numbers.rs  three_d_curve.rs  trying_derivatives.py  two_d_curve.rs
