[package]
name = "polynomial_subspaces"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "general ways to deal with subspaces of the polynomial rings R[X] with R some ring"
repository = "https://github.com/Cobord/polynomial_subspaces"

[dependencies]
bezier-rs = {version="0.4.0",optional=true}
glam = {version="0.28.0", optional=true}
fast_polynomial = "0.1.0"
lazy_static = {version="^1.5.0", optional=true}

[features]
GADT = []
pade = []
orthogonal = []
jacobi = ["orthogonal", "dep:lazy_static"]
bezier = ["dep:bezier-rs", "dep:glam"]
all_stable = ["pade","bezier","jacobi"]
all = ["GADT","all_stable"]